--- a/index.html
+++ b/index.html
@@ -7,23 +7,21 @@
   </head>
   <body>
     <!-- Main Content Section -->
-    <main id="main-content" class="content">
+    <main class="main-content">
       <!-- Team Information Section -->
-      <section id="team-info-container" class="section">
-        <div id="team-logo-container" class="logo">
+      <section class="team-info-container">
+        <div class="team-logo-container">
           <img src="path/to/athlete-school-logo.png" alt="Team Logo" />
         </div>
 
         <div class="team-info-container">
-          <p id="athlete-school-mascot" class="team-mascot">Team Mascot</p>
-          <p id="athlete-school-location" class="team-location">
-            Location: City, State
-          </p>
+          <p class="athlete-school-mascot">Team Mascot</p>
+          <p class="athlete-school-location">Location: City, State</p>
         </div>
       </section>
 
       <!-- Navigation Section -->
-      <nav id="main-navigation" class="navigation">
+      <nav class="navigation">
         <ul class="nav-list">
           <li class="nav-item">
             <a href="#athlete-profile">Athlete Profile</a>
@@ -35,7 +33,7 @@
 
       <!-- Athlete Profile Section -->
       <section class="athlete-profile">
-        <h1 id="athlete-name" class="athlete-name">Ben Randi</h1>
+        <h1 class="athlete-name">Ben Randi</h1>
 
         <div class="athlete-details">
           <div class="athlete-info">
@@ -48,9 +46,9 @@
       </section>
 
       <!-- Progress Section -->
-      <section id="athlete-progress" class="section">
+      <section class="athlete-progress">
         <h2 class="section-title">Runner Progress</h2>
-        <div id="progress-overview" class="progress-container">
+        <div class="progress-container">
           <table id="progress-table" class="table">
             <thead class="table-header">
               <tr>
@@ -72,7 +70,7 @@
             </tbody>
           </table>
         </div>
-        <div id="progress-graph" class="graph-container">
+        <div class="progress-graph-container">
           <h3 class="graph-title">Progress Over Time</h3>
           <!-- This graph will be filled in with progress overtime -->
           <canvas id="progressChart"></canvas>
@@ -80,9 +78,9 @@
       </section>
 
       <!-- Photo Gallery Section -->
-      <section id="photo-gallery" class="athlete-imgs">
+      <section class="athlete-imgs">
         <h2 class="section-title">Favorite Photos</h2>
-        <div id="upload-photo" class="upload-container">
+        <div class="upload-container">
           <!-- This section allows athlets to upload their favorite photos -->
           <label for="photo-upload">Upload your favorite photo:</label>
           <input
@@ -92,7 +90,7 @@
             accept="image/*"
           />
         </div>
-        <div id="photo-thumbnails" class="thumbnails-container">
+        <div class="thumbnails-container">
           <div class="thumbnail">
             <img src="path/to/photo1.jpg" alt="Athlete's favorite photo 1" />
           </div>
@@ -104,9 +102,9 @@
     </main>
 
     <!-- Footer Section -->
-    <footer id="footer" class="footer">
-      <div id="footer-container" class="container">
-        <div id="print-version" class="print-option">
+    <footer class="footer">
+      <div class="footer-container">
+        <div class="print-version">
           <a href="print-version.html">Printable Version</a>
         </div>
       </div>
